--- a/Musobaqa/css/main.css
+++ b/Musobaqa/css/main.css
@@ -57,8 +57,8 @@
 .logo{
   color: var(--name-color);
   font-family: mono-bold;
+  font-size: 22px;
 }
-
 .mode {
   display: flex;
   font-family: mono-bold;
