--- a/Musobaqa/css/main.css
+++ b/Musobaqa/css/main.css
@@ -120,6 +120,10 @@
   background: var(--elem-bg);
   box-shadow: 0px 16px 30px -10px rgba(70, 96, 187, 0.2);
 }
+.info-img img {
+  transition: 0s;
+  border-radius: 50%;
+}
 .date {
   color: var(--date-color);
   font-family: mono-regular;
